objects/SVMXC__Service_Contract_Products__c.object
<CustomObject>
    <fields>
        <fullName>InstalledProductQty__c</fullName>
        <formula>SVMXC__Installed_Product__r.Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IP Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InstalledProductType__c</fullName>
        <formula>SVMXC__Installed_Product__r.RecordType.Name</formula>
        <label>IP Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_IbLocation__c</fullName>
        <formula>SVMXC__Installed_Product__r.SVMXC__Site__c</formula>
        <label>Tech_IbLocation</label>
        <type>Text</type>
    </fields>
</CustomObject>